
#Update version
#Execute program with INFILE OUTFILE CURRENT_TAG

execute_process(COMMAND git describe --tags --long --dirty
                WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
                OUTPUT_VARIABLE GIT_TAG
                ERROR_VARIABLE GIT_ERROR
                OUTPUT_STRIP_TRAILING_WHITESPACE
                )

set(UPDATE_VERSION_ARGUMENTS "Version.h.in" "Version.h" "${GIT_TAG}")
execute_process(COMMAND "${PROJECT_BINARY_DIR}/Source/UpdateVersion/UpdateVersion" ${UPDATE_VERSION_ARGUMENTS}
                WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
                OUTPUT_VARIABLE UPDATE_OUT)

set(CORE_SOURCE_FILES 
    AppInit.cpp
    Logging.cpp
    MemoryExceptionFilter.cpp
    Multilanguage/LanguageClass.cpp
    N64System/CheatClass.cpp
    N64System/EmulationThread.cpp
    N64System/FramePerSecondClass.cpp
    N64System/Interpreter/InterpreterCPU.cpp
    N64System/Interpreter/InterpreterOps.cpp
    N64System/Interpreter/InterpreterOps32.cpp
    N64System/Mips/Audio.cpp
    N64System/Mips/Disk.cpp
    N64System/Mips/Dma.cpp
    N64System/Mips/Eeprom.cpp
    N64System/Mips/FlashRam.cpp
    N64System/Mips/GBCart.cpp
    N64System/Mips/MemoryVirtualMem.cpp
    N64System/Mips/Mempak.cpp
    N64System/Mips/OpcodeName.cpp
    N64System/Mips/PifRam.cpp
    N64System/Mips/RegisterClass.cpp
    N64System/Mips/Rumblepak.cpp
    N64System/Mips/Sram.cpp
    N64System/Mips/SystemEvents.cpp
    N64System/Mips/SystemTiming.cpp
    N64System/Mips/TLBclass.cpp
    N64System/Mips/Transferpak.cpp
    N64System/N64Class.cpp
    N64System/N64DiskClass.cpp
    N64System/N64RomClass.cpp
    N64System/ProfilingClass.cpp
    N64System/Recompiler/Arm/ArmOps.cpp
    N64System/Recompiler/Arm/ArmRecompilerOps.cpp
    N64System/Recompiler/Arm/ArmRegInfo.cpp
    N64System/Recompiler/CodeBlock.cpp
    N64System/Recompiler/CodeSection.cpp
    N64System/Recompiler/FunctionInfo.cpp
    N64System/Recompiler/FunctionMapClass.cpp
    N64System/Recompiler/LoopAnalysis.cpp
    N64System/Recompiler/RecompilerClass.cpp
    N64System/Recompiler/RecompilerCodeLog.cpp
    N64System/Recompiler/RecompilerMemory.cpp
    N64System/Recompiler/RegBase.cpp
    N64System/Recompiler/SectionInfo.cpp
    N64System/Recompiler/x86/x86ops.cpp
    N64System/Recompiler/x86/x86RecompilerOps.cpp
    N64System/Recompiler/x86/x86RegInfo.cpp
    N64System/SpeedLimiterClass.cpp
    N64System/SystemGlobals.cpp
    Plugins/AudioPlugin.cpp
    Plugins/ControllerPlugin.cpp
    Plugins/GFXPlugin.cpp
    Plugins/PluginBase.cpp
    Plugins/PluginClass.cpp
    Plugins/RSPPlugin.cpp
    RomList/RomList.cpp
    Settings.cpp
    Settings/DebugSettings.cpp
    Settings/GameSettings.cpp
    Settings/LoggingSettings.cpp
    Settings/N64SystemSettings.cpp
    Settings/RecompilerSettings.cpp
    Settings/SettingType/SettingsType-Application.cpp
    Settings/SettingType/SettingsType-ApplicationIndex.cpp
    Settings/SettingType/SettingsType-ApplicationPath.cpp
    Settings/SettingType/SettingsType-Cheats.cpp
    Settings/SettingType/SettingsType-Enhancements.cpp
    Settings/SettingType/SettingsType-GameSetting.cpp
    Settings/SettingType/SettingsType-GameSettingIndex.cpp
    Settings/SettingType/SettingsType-RDBCpuType.cpp
    Settings/SettingType/SettingsType-RDBOnOff.cpp
    Settings/SettingType/SettingsType-RDBRamSize.cpp
    Settings/SettingType/SettingsType-RDBSaveChip.cpp
    Settings/SettingType/SettingsType-RDBYesNo.cpp
    Settings/SettingType/SettingsType-RelativePath.cpp
    Settings/SettingType/SettingsType-RomDatabase.cpp
    Settings/SettingType/SettingsType-RomDatabaseIndex.cpp
    Settings/SettingType/SettingsType-RomDatabaseSetting.cpp
    Settings/SettingType/SettingsType-SelectedDirectory.cpp
    Settings/SettingType/SettingsType-TempBool.cpp
    Settings/SettingType/SettingsType-TempNumber.cpp
    Settings/SettingType/SettingsType-TempString.cpp
    ../3rdParty/zlib/contrib/minizip/unzip.h
    ../3rdParty/zlib/contrib/minizip/zip.h
    ../3rdParty/zlib/zconf.h
    ../3rdParty/zlib/zlib.h
    3rdParty/7zip.h
    3rdParty/zip.h
    AppInit.h
    Debugger.h
    ExceptionHandler.h
    Logging.h
    Multilanguage.h
    Multilanguage/LanguageClass.h
    N64System/CheatClass.h
    N64System/FramePerSecondClass.h
    N64System/Interpreter/InterpreterCPU.h
    N64System/Interpreter/InterpreterOps32.h
    N64System/Interpreter/InterpreterOps.h
    N64System/Mips/Audio.h
    N64System/Mips/Disk.h
    N64System/Mips/Dma.h
    N64System/Mips/Eeprom.h
    N64System/Mips/FlashRam.h
    N64System/Mips/GBCart.h
    N64System/Mips/MemoryVirtualMem.h
    N64System/Mips/Mempak.h
    N64System/Mips/OpCode.h
    N64System/Mips/OpcodeName.h
    N64System/Mips/PifRam.h
    N64System/Mips/RegisterClass.h
    N64System/Mips/Rumblepak.h
    N64System/Mips/Sram.h
    N64System/Mips/SystemEvents.h
    N64System/Mips/SystemTiming.h
    N64System/Mips/TLBClass.h
    N64System/Mips/Transferpak.h
    N64System/Mips/TranslateVaddr.h
    N64System/N64Class.h
    N64System/N64DiskClass.h
    N64System/N64RomClass.h
    N64System/N64Types.h
    N64System/ProfilingClass.h
    N64System/Recompiler/Arm/ArmOpCode.h
    N64System/Recompiler/Arm/ArmOps.h
    N64System/Recompiler/Arm/ArmRecompilerOps.h
    N64System/Recompiler/Arm/ArmRegInfo.h
    N64System/Recompiler/CodeBlock.h
    N64System/Recompiler/CodeSection.h
    N64System/Recompiler/ExitInfo.h
    N64System/Recompiler/FunctionInfo.h
    N64System/Recompiler/FunctionMapClass.h
    N64System/Recompiler/JumpInfo.h
    N64System/Recompiler/LoopAnalysis.h
    N64System/Recompiler/RecompilerClass.h
    N64System/Recompiler/RecompilerCodeLog.h
    N64System/Recompiler/RecompilerMemory.h
    N64System/Recompiler/RecompilerOps.h
    N64System/Recompiler/RegBase.h
    N64System/Recompiler/RegInfo.h
    N64System/Recompiler/SectionInfo.h
    N64System/Recompiler/x64-86/x64RegInfo.h
    N64System/Recompiler/x86/x86ops.h
    N64System/Recompiler/x86/x86RecompilerOps.h
    N64System/Recompiler/x86/x86RegInfo.h
    N64System/SpeedLimiterClass.h
    N64System/SystemGlobals.h
    Notification.h
    Plugin.h
    Plugins/AudioPlugin.h
    Plugins/ControllerPlugin.h
    Plugins/GFXPlugin.h
    Plugins/PluginBase.h
    Plugins/PluginClass.h
    Plugins/RSPPlugin.h
    RomList/RomList.h
    Settings.h
    Settings/DebugSettings.h
    Settings/GameSettings.h
    Settings/LoggingSettings.h
    Settings/N64SystemSettings.h
    Settings/RecompilerSettings.h
    Settings/SettingsID.h
    Settings/SettingType/SettingsType-Application.h
    Settings/SettingType/SettingsType-ApplicationIndex.h
    Settings/SettingType/SettingsType-ApplicationPath.h
    Settings/SettingType/SettingsType-Base.h
    Settings/SettingType/SettingsType-Cheats.h
    Settings/SettingType/SettingsType-Enhancements.h
    Settings/SettingType/SettingsType-GameSetting.h
    Settings/SettingType/SettingsType-GameSettingIndex.h
    Settings/SettingType/SettingsType-RDBCpuType.h
    Settings/SettingType/SettingsType-RDBOnOff.h
    Settings/SettingType/SettingsType-RDBRamSize.h
    Settings/SettingType/SettingsType-RDBSaveChip.h
    Settings/SettingType/SettingsType-RDBYesNo.h
    Settings/SettingType/SettingsType-RelativePath.h
    Settings/SettingType/SettingsType-RomDatabase.h
    Settings/SettingType/SettingsType-RomDatabaseIndex.h
    Settings/SettingType/SettingsType-RomDatabaseSetting.h
    Settings/SettingType/SettingsType-RomSetting.h
    Settings/SettingType/SettingsType-SelectedDirectory.h
    Settings/SettingType/SettingsType-TempBool.h
    Settings/SettingType/SettingsType-TempNumber.h
    Settings/SettingType/SettingsType-TempString.h
    stdafx.h
    TraceModulesProject64.h
    Version.h
)

include_directories(..)

add_library(Project64-core STATIC ${CORE_SOURCE_FILES})
